# Agentic-AI-trade

./: .dockerignore  .env.example  .gitignore  CLAUDE_CODE_GUIDE.md  DASHBOARD.md  Dockerfile  PHASE1.md  PHASE2.md  PHASE3.md  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
config/: api_keys.yaml.example  instruments.yaml  production.yaml  risk_params.yaml  settings.yaml
dashboard/: app.py
dashboard/components/: __init__.py  pnl_chart.py  risk_panel.py  signal_monitor.py
scripts/: deploy.sh  deploy_windows.ps1  health_check.sh  refresh_token.py  run_backtest.py  run_live.py  run_multiagent.py  run_multiagent_backtest.py  run_paper.py
src/: types.py
src/analysis/: claude_agent.py  regime_detector.py  sentiment_scorer.py  technical.py
src/data/: data_store.py  economic_calendar.py  market_data.py  news_feed.py  social_sentiment.py
src/execution/: exchange_adapter.py  order_manager.py  paper_engine.py
src/execution/adapters/: alpaca_adapter.py  binance_adapter.py  futu_adapter.py  ib_adapter.py  (+2 more)
src/orchestrator/: agent_registry.py  correlation_monitor.py  global_risk_manager.py
src/reflection/: attribution.py  portfolio_report.py  strategy_evolver.py  trade_journal.py
src/strategy/: orchestrator.py  position_sizer.py  risk_manager.py  signal_aggregator.py
src/utils/: health.py  logger.py  metrics.py  notifier.py  time_utils.py
tests/: test_attribution.py  test_integration_phase3.py  test_paper_engine.py  test_phase3_agents.py  test_phase3_completion.py  test_phase3_new_agents.py  test_production_modules.py  test_risk_manager.py  test_signal_aggregator.py  test_technical.py
(+5 files in other folders)
